Styling fixes (#95)
* Cleanup up article styling
Add browser specific transitions

* Fix event card styling bug

* Fix event card description cut off on tablet

* Run formatter

--- a/assets/scss/components/_event_card.scss
+++ b/assets/scss/components/_event_card.scss
@@ -111,8 +111,12 @@
     text-decoration: none;
   }
 
+  .date_card {
+    margin-top: -40px;
+  }
+
   .event_card {
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 22vw 66vw;
     grid-template-rows: 10rem;
     grid-template-areas: "picture description";
     width: 100%;
@@ -123,6 +127,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+  }
+
+  .truncated_text {
+    margin-bottom: 1rem;
   }
 }
 
